[tool.poetry]
authors = ["ehco1996 <zh19960202@gmail.com>"]
description = "shadowsocks build with asyncio , also support many user in one port"
include = [
  "LICENSE",
]
keywords = ["shadowsocsk", "asyncio", "grpc"]
license = "GPLV3"
name = "aioshadowsocks"
readme = "README.md"
version = "0.1.0"

packages = [
  {include = "shadowsocks"},
]

[tool.poetry.dependencies]
aiohttp = "==3.6.2"
bloom-filter = "==1.3"
fire = "==0.3.1"
grpclib = "==0.4.1"
hkdf = "==0.0.3"
peewee = "==3.13.3"
prometheus-async = "==19.2.0"
prometheus-client = "==0.8.0"
protobuf = "==3.13.0"
pycryptodome = "==3.9.8"
python = ">=3.8.0, <3.9.0"
requests = "==2.24.0"
sentry-sdk = "==0.18.0"
uvloop = "==0.14.0"

[tool.poetry.dev-dependencies]
grpcio-tools = "^1.30.0"
autoflake = ">=1.4"
black = ">=20.8b1"
isort = "5.5.4"

[tool.poetry.scripts]
aioss = 'shadowsocks.__main__:main'

[tool.black]
line-length = 88
target-version = ['py38']

[build-system]
build-backend = "poetry.core.masonry.api"
requires = ["poetry-core>=1.0.0"]
